--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,10 +4,13 @@
       <div>
         <h3 class="f4 b lh-title mb2 primary">Social media</h3>
         <ul class="mhn2">
-          {{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
+          {{ partial "social-icon" (dict "link"
+          "https://www.facebook.com/Vidyalankar.VP/" "svg" "icons-facebook") }}
           {{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }} {{
-          partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }} {{
-          partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
+          partial "social-icon" (dict "link"
+          "https://www.instagram.com/vp_vidyalankar/?hl=en" "svg"
+          "icons-instagram") }} {{ partial "social-icon" (dict "link" "#" "svg"
+          "icons-vimeo") }}
         </ul>
       </div>
     </div>
