--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,18 +2,18 @@
   <div class="mw7 center pt3">
     <div class="flex-ns justify-between">
       <div>
-        <h3 class="f4 b lh-title mb2 primary">Social media</h3>
         <ul class="mhn2">
           {{ partial "social-icon" (dict "link"
           "https://www.facebook.com/Vidyalankar.VP/" "svg" "icons-facebook") }}
-          {{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }} {{
-          partial "social-icon" (dict "link"
+          {{ partial "social-icon" (dict "link"
           "https://www.instagram.com/vp_vidyalankar/?hl=en" "svg"
-          "icons-instagram") }} {{ partial "social-icon" (dict "link" "#" "svg"
-          "icons-vimeo") }}
+          "icons-instagram") }}
         </ul>
       </div>
     </div>
+    <h3 class="f4 b lh-title mb2 primary">
+      Vidyalankar Polytechnic 2022-2023 All Right Reserved
+    </h3>
   </div>
 </footer>
 
