--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -11,8 +11,8 @@
         </ul>
       </div>
     </div>
-    <h3 class="f4 b lh-title mb2 primary">
-      Vidyalankar Polytechnic 2022-2023 All Right Reserved
+    <h3 class="f4 b lh-title mb2 primary" style="color: green">
+      Vidyalankar Polytechnic © 2022-2023 All Right Reserved
     </h3>
   </div>
 </footer>
