--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -8,10 +8,8 @@
 
   <!-- Primary Nav -->
   <ul class="flex b grey-3">
-    <li><a href="/products" class="pa3 no-underline db">Products</a></li>
+    <li><a href="/products" class="pa3 no-underline db">Home</a></li>
 
-    <li><a href="/values" class="pa3 no-underline db">Values</a></li>
-
-    <li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+    <li><a href="/post" class="pa3 no-underline db">Events</a></li>
   </ul>
 </nav>
