--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,6 +1,6 @@
 <div
   class="pv5 pv6-l ph3 bg-center cover"
-  style="background-image: url('{{./ban.jpeg}}')"
+  style="background-image: url('{{./static/img/ban.jpeg}}')"
 >
   <div class="mw7 center ph3">
     <div class="db mb3">
