--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,4 +1,11 @@
-<div class="pv5 pv6-l ph3 bg-center cover">
+<div
+  class="pv5 pv6-l ph3 bg-center cover"
+  img
+  src="./static/img/ban.jpeg"
+  alt="Banner_image"
+  width=""
+  height=""
+>
   <div class="mw7 center ph3">
     <div class="db mb3">
       <div class="mw7 relative bg-fix-primary mb3">
