--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,7 +1,7 @@
 <div
   class="pv5 pv6-l ph3 bg-center cover"
   img
-  src="./static/img/ban.jpeg"
+  src="site\static\img\ban.jpeg"
   alt="Banner_image"
   width=""
   height=""
