--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-black ph3 pv4 white">
   <div class="mw7 center pt3">
     <div class="flex-ns justify-between">
-      <img src="./static/img/logo.jpg" alt="logo" width="" height="" />
+      <img src="site\static\img\logo.jpg" alt="logo" width="" height="" />
       <div>
         <ul class="mhn2">
           {{ partial "social-icon" (dict "link"
