--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-black ph3 pv4 white">
   <div class="mw7 center pt3">
     <div class="flex-ns justify-between">
-      <img src="site\static\img\logo.jpg" alt="logo" width="" height="" />
+      <h3 class="f4 b lh-title mb2 primary" style="color: green">Follow Us</h3>
       <div>
         <ul class="mhn2">
           {{ partial "social-icon" (dict "link"
