--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -8,7 +8,13 @@
 
   <!-- Primary Nav -->
   <ul class="flex b grey-3">
-    <li><a href="/products" class="pa3 no-underline db">Home</a></li>
+    <li>
+      <a
+        href="https://bytebusters-techshala.netlify.app/"
+        class="pa3 no-underline db"
+        >Home</a
+      >
+    </li>
 
     <li><a href="/post" class="pa3 no-underline db">Events</a></li>
   </ul>
